# ResNet18_inference-CUDA

./: README.md
resent18_inference_CUDA/: .gitignore
resent18_inference_CUDA/cpp/: CMakeLists.txt
resent18_inference_CUDA/cpp/fp32/: CMakeLists.txt
resent18_inference_CUDA/cpp/fp32/kernels/: gap_global.cu  gap_global.cuh  im2col.cu  relu.cu  softmax.cu
resent18_inference_CUDA/cpp/fp32/runtime/: infer_head.cu  infer_layer2.cu  infer_layer3.cu  infer_layer4.cu
resent18_inference_CUDA/reports/: Step1.md
resent18_inference_CUDA/scripts/: run_step2.sh  run_step4.sh  run_step6.sh
resent18_inference_CUDA/tools/: make_e2e_fixtures.py  make_step3_fixture.py  make_step4_fixture.py  make_step7_fixture.py
resnet18-kernel-lab/: snippet.py
resnet18-kernel-lab/cpp/fp32/kernels/: add.cu  bn_inference.cu  maxpool2d.cu  maxpool2d.cuh  sgemm_tiled.cu
resnet18-kernel-lab/cpp/fp32/runtime/: infer_conv1_bn1_relu.cu  infer_e2e.cu  infer_layer1.cu  utils.hpp
resnet18-kernel-lab/reports/: Step2.md
resnet18-kernel-lab/scripts/: build_fp32.sh  run_step3.sh  run_step5.sh  run_step7.sh  run_step8.sh  run_step9.sh  run_step9_e2e.sh
resnet18-kernel-lab/tools/: bench_fp32_vs_torch.py  bench_fp32_vs_torch_e2e.py  bench_fp32_vs_torch_fast.py  diag_e2e_compare.py  export_resnet18.py  make_step2_fixture.py  make_step5_fixture.py  make_step6_fixture.py  make_step8_fixture.py  preprocess_to_bin.py
